sumo/tests/sumo/output/e2/errors/file_empty/errors.sumo
Error: Attribute 'file' in definition of e2-detector '4/1to3/1' is empty.
Quitting (on error).
